--- a/index.html
+++ b/index.html
@@ -51,8 +51,9 @@
 <div class="jumbotron">
   <div class="container text-center">
     <h1>Who is novakassia?</h1>      
-    <p>nova: human explosion</p>
+    <p>nova: a transient astronomical event that causes the sudden appearance of a bright, apparently "new" star</p>
     <p>kassia: human explosion</p>
+    <p>email: novakassia11@gmail.com</p>
   </div>
 </div>
   
