--- a/index.html
+++ b/index.html
@@ -50,9 +50,8 @@
 
 <div class="jumbotron">
   <div class="container text-center">
-    <h1>Who is novakassia?</h1>      
     <p>nova: a transient astronomical event that causes the sudden appearance of a bright, apparently "new" star</p>
-    <p>kassia: human explosion</p>
+    <p>kassia: human composer</p>
     <p>email: novakassia11@gmail.com</p>
   </div>
 </div>
@@ -60,26 +59,26 @@
 <div class="container-fluid bg-3 text-center">    
   <h3>Some of my Work</h3><br>
   <div class="row">
-    <div class="col-sm-3">
-      <p>Some text..</p>
+    <div class="col-sm-4">
+      <p>Music</p>
       <img src="https://placehold.it/150x80?text=IMAGE" class="img-responsive" style="width:100%" alt="Image">
     </div>
-    <div class="col-sm-3"> 
-      <p>Some text..</p>
+    <div class="col-sm-4"> 
+      <p>Art</p>
       <img src="https://placehold.it/150x80?text=IMAGE" class="img-responsive" style="width:100%" alt="Image">
     </div>
-    <div class="col-sm-3"> 
-      <p>Some text..</p>
+    <div class="col-sm-4"> 
+      <p>Gallery</p>
       <img src="https://placehold.it/150x80?text=IMAGE" class="img-responsive" style="width:100%" alt="Image">
     </div>
-    <div class="col-sm-3">
+    <!-- <div class="col-sm-3">
       <p>Some text..</p>
       <img src="https://placehold.it/150x80?text=IMAGE" class="img-responsive" style="width:100%" alt="Image">
-    </div>
+    </div> -->
   </div>
 </div><br>
 
-<div class="container-fluid bg-3 text-center">    
+<!-- <div class="container-fluid bg-3 text-center">     -->
   <div class="row">
     <div class="col-sm-3">
       <p>Some text..</p>
