--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
 </div>
   
 <div class="container-fluid bg-3 text-center">    
-  <h3>Some of my Work</h3><br>
+  <h3>The Novaverse</h3><br>
   <div class="row">
     <div class="col-sm-4">
       <p>Music</p>
