--- a/index.html
+++ b/index.html
@@ -38,6 +38,7 @@
         <li class="active"><a href="#">Home</a></li>
         <li><a href="#">About</a></li>
         <li><a href="#">Music</a></li>
+        <li><a href="#">Art</a></li>
         <li><a href="#">Gallery</a></li>
         <li><a href="#">Contact</a></li>
       </ul>
@@ -61,15 +62,15 @@
   <div class="row">
     <div class="col-sm-4">
       <p>Music</p>
-      <img src="https://placehold.it/150x80?text=IMAGE" class="img-responsive" style="width:100%" alt="Image">
+      <img src="photos/homepage/camera.jpg" class="img-responsive" style="width:100%" alt="Image">
     </div>
     <div class="col-sm-4"> 
       <p>Art</p>
-      <img src="https://placehold.it/150x80?text=IMAGE" class="img-responsive" style="width:100%" alt="Image">
+      <img src="photos/homepage/camera.jpg" class="img-responsive" style="width:100%" alt="Image">
     </div>
     <div class="col-sm-4"> 
       <p>Gallery</p>
-      <img src="https://placehold.it/150x80?text=IMAGE" class="img-responsive" style="width:100%" alt="Image">
+      <img src="photos/homepage/camera.jpg" class="img-responsive" style="width:100%" alt="Image">
     </div>
     <!-- <div class="col-sm-3">
       <p>Some text..</p>
