--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
   <div class="row">
     <div class="col-sm-4">
       <p>Music</p>
-      <img src="photos/homepage/cassettee.jpg" class="img-responsive" style="width:100%; height: 50%;" alt="Image">
+      <img src="photos/homepage/cassettee.jpg" class="img-responsive" style="width:100%; height: 50%" alt="Image">
     </div>
     <div class="col-sm-4"> 
       <p>Art</p>
