--- a/index.html
+++ b/index.html
@@ -62,15 +62,15 @@
   <div class="row">
     <div class="col-sm-4">
       <p>Music</p>
-      <img src="photos/homepage/cassettee.jpg" class="img-responsive" style="width:100%; height: 50px" alt="Image">
+      <img src="photos/homepage/cassettee.jpg" class="img-responsive" style="width:100%" alt="Image">
     </div>
     <div class="col-sm-4"> 
       <p>Art</p>
-      <img src="photos/homepage/flowers_art.jpg" class="img-responsive" style="width:100%; height: 50px" alt="Image">
+      <img src="photos/homepage/flowers_art.jpg" class="img-responsive" style="width:100%" alt="Image">
     </div>
     <div class="col-sm-4"> 
       <p>Gallery</p>
-      <img src="photos/homepage/camera.jpg" class="img-responsive" style="width:100%; height: 50px" alt="Image">
+      <img src="photos/homepage/camera.jpg" class="img-responsive" style="width:100%" alt="Image">
     </div>
     <!-- <div class="col-sm-3">
       <p>Some text..</p>
