updated hp photo sizes

--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
     <p>kassia: human composer</p>
     <p>email: novakassia11@gmail.com</p>
   </div>
-</div>
+</div>m
   
 <div class="container-fluid bg-3 text-center">    
   <h3>The Novaverse</h3><br>
