--- a/index.html
+++ b/index.html
@@ -36,10 +36,10 @@
     <div class="collapse navbar-collapse" id="myNavbar">
       <ul class="nav navbar-nav">
         <li class="active"><a href="#">Home</a></li>
-        <li><a href="#">About</a></li>
         <li><a href="#">Music</a></li>
-        <li><a href="#">Art</a></li>
-        <li><a href="#">Gallery</a></li>
+        <li><a href="#">ThePerfectGraphics</a></li>
+        <li><a href="#">Photo Gallery</a></li>
+        <li><a href="#">Supernova Cleaning Services</a></li>
         <li><a href="#">Contact</a></li>
       </ul>
 <!--       <ul class="nav navbar-nav navbar-right">
@@ -58,24 +58,24 @@
 </div>
   
 <div class="container-fluid bg-3 text-center">    
-  <h3>The Novaverse</h3><br>
+  <h3>The Kassiverse</h3><br>
   <div class="row">
-    <div class="col-sm-4">
+    <div class="col-sm-3">
       <p>Music</p>
       <img src="photos/homepage/cassettee.png" class="img-responsive" style="width:100%" alt="Image">
     </div>
-    <div class="col-sm-4"> 
-      <p>Art</p>
+    <div class="col-sm-3"> 
+      <p>ThePerfectGraphics</p>
       <img src="photos/homepage/flowers_art.png" class="img-responsive" style="width:100%" alt="Image">
     </div>
-    <div class="col-sm-4"> 
-      <p>Gallery</p>
+    <div class="col-sm-3"> 
+      <p>Photo Gallery</p>
       <img src="photos/homepage/camera.png" class="img-responsive" style="width:100%" alt="Image">
     </div>
-    <!-- <div class="col-sm-3">
-      <p>Some text..</p>
+    <div class="col-sm-3">
+      <p>Supernova Cleaning Services</p>
       <img src="https://placehold.it/150x80?text=IMAGE" class="img-responsive" style="width:100%" alt="Image">
-    </div> -->
+    </div>
   </div>
 </div><br>
 
