--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
     </div>
     <div class="col-sm-3">
       <p>Supernova Cleaning Services</p>
-      <img src="https://placehold.it/150x80?text=IMAGE" class="img-responsive" style="width:100%" alt="Image">
+      <img src="photos/homepage/cleaning.png" class="img-responsive" style="width:100%" alt="Image">
     </div>
   </div>
 </div><br>
@@ -82,7 +82,7 @@
 </div><br><br>
 
 <footer class="container-fluid text-center">
-  <p>Footer Text</p>
+  <p>welcome to my orbit.</p>
 </footer>
 
 </body>
