--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
         <li><a href="#">ThePerfectGraphics</a></li>
         <li><a href="#">Photo Gallery</a></li>
         <li><a href="#">Supernova Cleaning Services</a></li>
-        <li><a href="#">Contact</a></li>
+        <!-- <li><a href="#">Contact</a></li> -->
       </ul>
 <!--       <ul class="nav navbar-nav navbar-right">
         <li><a href="#"><span class="glyphicon glyphicon-log-in"></span> Login</a></li>
