--- a/index.html
+++ b/index.html
@@ -36,10 +36,10 @@
     <div class="collapse navbar-collapse" id="myNavbar">
       <ul class="nav navbar-nav">
         <li class="active"><a href="#">Home</a></li>
-        <li><a href="#">Music</a></li>
-        <li><a href="#">ThePerfectGraphics</a></li>
-        <li><a href="#">Photo Gallery</a></li>
-        <li><a href="#">Supernova Cleaning Services</a></li>
+        <li><a href="pages/music.html">Music</a></li>
+        <li><a href="pages/theperfectgraphics.html">ThePerfectGraphics</a></li>
+        <li><a href="pages/photogallery.html">Photo Gallery</a></li>
+        <li><a href="pages/supernovacleaning.html">Supernova Cleaning Services</a></li>
         <!-- <li><a href="#">Contact</a></li> -->
       </ul>
 <!--       <ul class="nav navbar-nav navbar-right">
